@@ -1,7 +1,5 @@
 package com.purbon.kafka.topology;
 
-import static com.purbon.kafka.topology.model.Component.*;
-
 import com.purbon.kafka.topology.actions.Action;
 import com.purbon.kafka.topology.actions.access.ClearBindings;
 import com.purbon.kafka.topology.actions.access.CreateBindings;
@@ -65,7 +63,6 @@ public class AccessControlManager implements ExecutionPlanUpdater {
       aclBindingsResults.addAll(buildPlatformLevelActions(topology));
       aclBindingsResults.addAll(buildSpecialTopicsAcls(topology));
     }
-
     buildUpdateBindingsActions(aclBindingsResults, loadActualClusterStateIfAvailable(plan))
         .forEach(plan::add);
   }
@@ -79,17 +76,14 @@ public class AccessControlManager implements ExecutionPlanUpdater {
             .filter(resourceFilter::matchesManagedPrefixList)
             .filter(this::isNotInternalAcl)
             .collect(Collectors.toSet());
-
     if (!config.shouldVerifyRemoteState()) {
       OnceOnlyWarningLogger.getInstance().logRemoteStateVerificationDisabledWarning();
     }
-
     if (config.shouldVerifyRemoteState() && !config.fetchStateFromTheCluster()) {
       // should detect if there are divergences between the local cluster state and the current
       // status in the cluster
       detectDivergencesInTheRemoteCluster(plan);
     }
-
     return currentState;
   }
 
@@ -100,12 +94,10 @@ public class AccessControlManager implements ExecutionPlanUpdater {
       return;
     }
     var remoteAcls = providerBindings();
-
     var delta =
         plan.getBindings().stream()
             .filter(acl -> !remoteAcls.contains(acl))
             .collect(Collectors.toList());
-
     if (!delta.isEmpty()) {
       String errorMessage =
           "Your remote state has changed since the last execution, this ACL(s): "
@@ -135,7 +127,6 @@ public class AccessControlManager implements ExecutionPlanUpdater {
    */
   private List<AclBindingsResult> buildProjectAclBindings(Topology topology) {
     List<AclBindingsResult> aclBindingsResults = new ArrayList<>();
-
     for (Project project : topology.getProjects()) {
       if (config.shouldOptimizeAcls()) {
         aclBindingsResults.addAll(buildOptimizeConsumerAndProducerAcls(project));
@@ -160,7 +151,6 @@ public class AccessControlManager implements ExecutionPlanUpdater {
                         new ConnectorAuthorizationAclBindingsBuilder(bindingsBuilder, connector)
                             .getAclBindings()));
       }
-
       for (Schemas schemaAuthorization : project.getSchemas()) {
         aclBindingsResults.add(
             new SchemaAuthorizationAclBindingsBuilder(
@@ -168,9 +158,6 @@ public class AccessControlManager implements ExecutionPlanUpdater {
                         bindingsBuilder, schemaAuthorization, config, topicPrefix))
                 .getAclBindings());
       }
-
-      syncRbacRawRoles(project.getRbacRawRoles(), topicPrefix, aclBindingsResults);
-
       for (Map.Entry<String, List<Other>> other : project.getOthers().entrySet()) {
         if (julieRoles.size() == 0) {
           throw new IllegalStateException(
@@ -201,7 +188,6 @@ public class AccessControlManager implements ExecutionPlanUpdater {
         new ProducerAclBindingsBuilder(
                 bindingsBuilder, project.getProducers(), project.namePrefix(), true)
             .getAclBindings());
-
     // When optimised, still need to add any topic level specific.
     aclBindingsResults.addAll(buildBasicUsersAcls(project, false));
     return aclBindingsResults;
@@ -223,7 +209,6 @@ public class AccessControlManager implements ExecutionPlanUpdater {
   private List<AclBindingsResult> buildBasicUsersAcls(
       Collection<Topic> topics, Project project, boolean includeProjectLevel) {
     List<AclBindingsResult> aclBindingsResults = new ArrayList<>();
-
     for (Topic topic : topics) {
       final String fullTopicName = topic.toString();
       Set<Consumer> consumers = new HashSet(topic.getConsumers());
@@ -255,33 +240,29 @@ public class AccessControlManager implements ExecutionPlanUpdater {
   /**
    * Build a list of actions required to create or delete necessary bindings
    *
-   * @param aclBindingsResults List of pre computed actions based on a topology
+   * @param aclBindingsResults List of pre-computed actions based on a topology
    * @param bindings List of current bindings available in the cluster
    * @return List<Action> list of actions necessary to update the cluster
    */
   private List<Action> buildUpdateBindingsActions(
       List<AclBindingsResult> aclBindingsResults, Set<TopologyAclBinding> bindings)
       throws IOException {
-
     List<Action> updateActions = new ArrayList<>();
-
     final List<String> errorMessages =
         aclBindingsResults.stream()
             .filter(AclBindingsResult::isError)
             .map(AclBindingsResult::getErrorMessage)
-            .collect(Collectors.toList());
+            .toList();
     if (!errorMessages.isEmpty()) {
       for (String errorMessage : errorMessages) {
         LOGGER.error(errorMessage);
       }
-      throw new IOException(errorMessages.get(0));
+      throw new IOException(errorMessages.getFirst());
     }
-
     Set<TopologyAclBinding> allFinalBindings =
         aclBindingsResults.stream()
             .flatMap(aboe -> aboe.getAclBindings().stream())
             .collect(Collectors.toSet());
-
     Set<TopologyAclBinding> bindingsToBeCreated =
         allFinalBindings.stream()
             .filter(Objects::nonNull)
@@ -290,12 +271,10 @@ public class AccessControlManager implements ExecutionPlanUpdater {
             // Diff of bindings, so we only create what is not already created in the cluster.
             .filter(binding -> !bindings.contains(binding))
             .collect(Collectors.toSet());
-
     if (!bindingsToBeCreated.isEmpty()) {
       CreateBindings createBindings = new CreateBindings(controlProvider, bindingsToBeCreated);
       updateActions.add(createBindings);
     }
-
     if (config.isAllowDeleteBindings()) {
       // clear acls that does not appear anymore in the new generated list,
       // but where previously created
@@ -315,59 +294,16 @@ public class AccessControlManager implements ExecutionPlanUpdater {
   private List<AclBindingsResult> buildPlatformLevelActions(final Topology topology) {
     List<AclBindingsResult> aclBindingsResults = new ArrayList<>();
     Platform platform = topology.getPlatform();
-
-    // Set cluster level ACLs
-    syncClusterLevelRbac(platform.getKafka().getRbac(), KAFKA, aclBindingsResults);
-    syncClusterLevelRbac(platform.getKafkaConnect().getRbac(), KAFKA_CONNECT, aclBindingsResults);
-    syncClusterLevelRbac(
-        platform.getSchemaRegistry().getRbac(), SCHEMA_REGISTRY, aclBindingsResults);
-
     // Set component level ACLs
     for (SchemaRegistryInstance schemaRegistry : platform.getSchemaRegistry().getInstances()) {
       aclBindingsResults.add(
           new SchemaRegistryAclBindingsBuilder(bindingsBuilder, schemaRegistry).getAclBindings());
     }
-    for (ControlCenterInstance controlCenter : platform.getControlCenter().getInstances()) {
-      aclBindingsResults.add(
-          new ControlCenterAclBindingsBuilder(bindingsBuilder, controlCenter).getAclBindings());
-    }
-
     for (KsqlServerInstance ksqlServer : platform.getKsqlServer().getInstances()) {
       aclBindingsResults.add(
           new KSqlServerAclBindingsBuilder(bindingsBuilder, ksqlServer).getAclBindings());
     }
-
     return aclBindingsResults;
-  }
-
-  private void syncClusterLevelRbac(
-      Optional<Map<String, List<User>>> rbac,
-      Component cmp,
-      List<AclBindingsResult> aclBindingsResults) {
-    if (rbac.isPresent()) {
-      Map<String, List<User>> roles = rbac.get();
-      for (String role : roles.keySet()) {
-        for (User user : roles.get(role)) {
-          aclBindingsResults.add(
-              new ClusterLevelAclBindingsBuilder(bindingsBuilder, role, user, cmp)
-                  .getAclBindings());
-        }
-      }
-    }
-  }
-
-  private void syncRbacRawRoles(
-      Map<String, List<String>> rbacRawRoles,
-      String topicPrefix,
-      List<AclBindingsResult> aclBindingsResults) {
-    rbacRawRoles.forEach(
-        (predefinedRole, principals) ->
-            principals.forEach(
-                principal ->
-                    aclBindingsResults.add(
-                        new PredefinedAclBindingsBuilder(
-                                bindingsBuilder, principal, predefinedRole, topicPrefix)
-                            .getAclBindings())));
   }
 
   private Optional<AclBindingsResult> syncApplicationAcls(DynamicUser app, String topicPrefix) {
