@@ -21,7 +21,6 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
@@ -56,7 +55,6 @@ public class CCloudApi {
             new JulieHttpClient(ccloudApiBaseUrl, Optional.of(config)));
     this.clusterHttpClient.setBasicAuth(config.getConfluentCloudClusterAuth());
     this.ccloudApiHttpClient.setBasicAuth(config.getConfluentCloudCloudApiAuth());
-
     this.serviceAccountPageSize = config.getConfluentCloudServiceAccountQuerySize();
   }
 
@@ -81,8 +79,7 @@ public class CCloudApi {
       KafkaAclListResponse response =
           (KafkaAclListResponse)
               JSON.toObject(rawResponse.getResponseAsString(), KafkaAclListResponse.class);
-      acls.addAll(
-          response.getData().stream().map(TopologyAclBinding::new).collect(Collectors.toList()));
+      acls.addAll(response.getData().stream().map(TopologyAclBinding::new).toList());
       url = response.getMetadata().getNext();
     } while (url != null);
     return acls;
@@ -102,7 +99,6 @@ public class CCloudApi {
     var requestJson = JSON.asString(request);
     LOGGER.debug("createServiceAccount request=" + requestJson);
     String responseBody = ccloudApiHttpClient.doPost(V2_IAM_SERVICE_ACCOUNTS_URL, requestJson);
-
     ServiceAccountResponse response =
         (ServiceAccountResponse) JSON.toObject(responseBody, ServiceAccountResponse.class);
     return new ServiceAccount(
@@ -116,7 +112,6 @@ public class CCloudApi {
     String url = V2_IAM_SERVICE_ACCOUNTS_URL;
     boolean finished;
     Set<ServiceAccount> accounts = new HashSet<>();
-
     do {
       ListServiceAccountResponse response = getListServiceAccounts(url, serviceAccountPageSize);
       for (ServiceAccountResponse serviceAccountResponse : response.getData()) {
@@ -129,7 +124,6 @@ public class CCloudApi {
                 resourceId);
         accounts.add(serviceAccount);
       }
-
       String nextUrl = response.getMetadata().getNext();
       finished = nextUrl == null;
       if (!finished) {
