@@ -40,15 +40,12 @@ public class QuotasManagerIT {
 
   private TopologyBuilderAdminClient topologyAdminClient;
   private AccessControlManager accessControlManager;
-  private SimpleAclsProvider aclsProvider;
 
   private ExecutionPlan plan;
-  private BackendController cs;
 
   private Configuration config;
 
   private QuotasManager quotasManager;
-  private AclsBindingsBuilder bindingsBuilder;
 
   @BeforeClass
   public static void setup() {
@@ -68,25 +65,19 @@ public class QuotasManagerIT {
     topologyAdminClient = new TopologyBuilderAdminClient(kafkaAdminClient);
     ContainerTestUtils.clearAclsAndTopics(container);
     TestUtils.deleteStateFile();
-
     Properties props = new Properties();
     props.put(TOPOLOGY_TOPIC_STATE_FROM_CLUSTER, "false");
     props.put(ALLOW_DELETE_TOPICS, true);
     props.put(ALLOW_DELETE_BINDINGS, true);
-
     HashMap<String, String> cliOps = new HashMap<>();
     cliOps.put(BROKERS_OPTION, "");
     cliOps.put(CCLOUD_ENV_CONFIG, "");
-
     config = new Configuration(cliOps, props);
-
-    this.cs = new BackendController();
-    this.plan = ExecutionPlan.init(cs, System.out);
-
-    bindingsBuilder = new AclsBindingsBuilder(config);
+    final BackendController backendController = new BackendController();
+    this.plan = ExecutionPlan.init(backendController, System.out);
+    final AclsBindingsBuilder bindingsBuilder = new AclsBindingsBuilder(config);
     quotasManager = new QuotasManager(topologyAdminClient, config);
-    aclsProvider = new SimpleAclsProvider(topologyAdminClient);
-
+    final SimpleAclsProvider aclsProvider = new SimpleAclsProvider(topologyAdminClient);
     accessControlManager = new AccessControlManager(aclsProvider, bindingsBuilder, config);
   }
 
@@ -96,25 +87,20 @@ public class QuotasManagerIT {
     producers.add(producer);
     Producer producer2 = new Producer("User:user2");
     producers.add(producer2);
-
     List<Consumer> consumers = new ArrayList<>();
     Consumer consumer = new Consumer("User:user1");
     consumers.add(consumer);
     Consumer consumer2 = new Consumer("User:user2");
     consumers.add(consumer2);
-
     Project project = new ProjectImpl("project");
     project.setProducers(producers);
     project.setConsumers(consumers);
-
     Topic topicA = new Topic("topicA");
     project.addTopic(topicA);
-
     Topology topology = new TopologyImpl();
     topology.setContext("integration-test");
     topology.addOther("source", "producerAclsCreation");
     topology.addProject(project);
-
     return topology;
   }
 
@@ -124,20 +110,16 @@ public class QuotasManagerIT {
     producers.add(producer);
     Producer producer2 = new Producer("User:user2");
     producers.add(producer2);
-
     List<Consumer> consumers = new ArrayList<>();
     Consumer consumer = new Consumer("User:user1");
     consumers.add(consumer);
     Consumer consumer2 = new Consumer("User:user2");
     consumers.add(consumer2);
-
     Project project = new ProjectImpl("project");
     project.setProducers(producers);
     project.setConsumers(consumers);
-
     Topic topicA = new Topic("topicA");
     project.addTopic(topicA);
-
     Platform platform = new Platform();
     Kafka kafka = new Kafka();
     Quota quota = new Quota();
@@ -147,13 +129,11 @@ public class QuotasManagerIT {
     quota.setRequest_percentage(Optional.of(80d));
     kafka.setQuotas(Optional.of(List.of(quota)));
     platform.setKafka(kafka);
-
     Topology topology = new TopologyImpl();
     topology.setContext("integration-test");
     topology.addOther("source", "producerAclsCreation");
     topology.addProject(project);
     topology.setPlatform(platform);
-
     return topology;
   }
 
@@ -163,25 +143,20 @@ public class QuotasManagerIT {
     producers.add(producer);
     Producer producer2 = new Producer("User:user2");
     producers.add(producer2);
-
     List<Consumer> consumers = new ArrayList<>();
     Consumer consumer = new Consumer("User:user1");
     consumers.add(consumer);
     Consumer consumer2 = new Consumer("User:user2");
     consumers.add(consumer2);
-
     Project project = new ProjectImpl("project");
     project.setProducers(producers);
     project.setConsumers(consumers);
-
     Topic topicA = new Topic("topicA");
     project.addTopic(topicA);
-
     Topology topology = new TopologyImpl();
     topology.setContext("integration-test");
     topology.addOther("source", "producerAclsCreation");
     topology.addProject(project);
-
     return topology;
   }
 
@@ -191,13 +166,10 @@ public class QuotasManagerIT {
     Topology topology = topologyWithQuotas();
     quotasManager.updatePlan(topology, plan);
     plan.run();
-
     List<Action> actions = plan.getActions();
-
     assertEquals(1, actions.size());
-    Action action = actions.get(0);
+    Action action = actions.getFirst();
     assertTrue(action instanceof CreateQuotasAction);
-
     plan.getActions().clear();
     try {
       /* with CP 8.0.0 there are timing issues between updating quotas and querying them. */
@@ -208,22 +180,16 @@ public class QuotasManagerIT {
     // Test NOOP plan update
     quotasManager.updatePlan(topology, plan);
     plan.run();
-
     actions = plan.getActions();
-
     assertTrue(actions.isEmpty());
-
     plan.getActions().clear();
-
     // Test quota deletion plan update with deletion disabled
     assertFalse(config.isAllowDeleteQuotas());
     topology = topologyWithoutQuotas();
     quotasManager.updatePlan(topology, plan);
     plan.run();
-
     actions = plan.getActions();
     assertTrue(actions.isEmpty());
-
     // Test quota deletion plan update with deletion enabled
     // Enable quota deletion
     Properties props = new Properties();
@@ -231,36 +197,29 @@ public class QuotasManagerIT {
     props.put(ALLOW_DELETE_TOPICS, true);
     props.put(ALLOW_DELETE_BINDINGS, true);
     props.put(ALLOW_DELETE_QUOTAS, true);
-
     HashMap<String, String> cliOps = new HashMap<>();
     cliOps.put(BROKERS_OPTION, "");
     cliOps.put(CCLOUD_ENV_CONFIG, "");
-
     config = new Configuration(cliOps, props);
     quotasManager = new QuotasManager(topologyAdminClient, config);
-
     assertTrue(config.isAllowDeleteQuotas());
     topology = topologyWithoutQuotas();
     quotasManager.updatePlan(topology, plan);
     plan.run();
-
     actions = plan.getActions();
     assertEquals(1, actions.size());
-    action = actions.get(0);
+    action = actions.getFirst();
     assertTrue(action instanceof DeleteQuotasAction);
   }
 
   @Test
   public void quotaForUserCreation() throws ExecutionException, InterruptedException, IOException {
-
     Topology topology = woldMSpecPattern();
     accessControlManager.updatePlan(topology, plan);
     plan.run();
-
     List<Quota> quotas = new ArrayList<>();
     Quota quota = new Quota("user1", Optional.empty(), Optional.of(20.0));
     quotas.add(quota);
-
     topologyAdminClient.assignQuotasPrincipal(quotas);
     // Verify Quotas
     verifyQuotasOnlyUser(quotas);
@@ -268,19 +227,15 @@ public class QuotasManagerIT {
 
   @Test
   public void quotaForUserRemove() throws ExecutionException, InterruptedException, IOException {
-
     Topology topology = woldMSpecPattern();
     accessControlManager.updatePlan(topology, plan);
     plan.run();
-
     List<Quota> quotas = new ArrayList<>();
     Quota quota = new Quota("user3", Optional.empty(), Optional.of(20.0));
     quotas.add(quota);
-
     topologyAdminClient.assignQuotasPrincipal(quotas);
     // Verify Quotas
     assertTrue(verifyQuotasOnlyUser(quotas).stream().allMatch(f -> f.equals(true)));
-
     // Remove quota
     topologyAdminClient.removeQuotasPrincipal(List.of(new User("user3")));
     assertTrue(verifyQuotasOnlyUser(quotas).stream().allMatch(f -> f.equals(false)));
@@ -289,18 +244,15 @@ public class QuotasManagerIT {
   @Test
   public void quotaForUserChangeValues()
       throws ExecutionException, InterruptedException, IOException {
-
     Topology topology = woldMSpecPattern();
     accessControlManager.updatePlan(topology, plan);
     plan.run();
-
     List<Quota> quotas = new ArrayList<>();
     Quota quota = new Quota("user1", Optional.empty(), Optional.of(20.0));
     quotas.add(quota);
     topologyAdminClient.assignQuotasPrincipal(quotas);
     // Verify Quotas
     assertTrue(verifyQuotasOnlyUser(quotas).stream().allMatch(f -> f.equals(true)));
-
     // change value
     Quota quotaUpdate = new Quota("user1", Optional.of(150.0), Optional.of(250.0));
     quotas.clear();
@@ -312,11 +264,9 @@ public class QuotasManagerIT {
   @Test
   public void quotaOnlyRemoveOneUser()
       throws ExecutionException, InterruptedException, IOException {
-
     Topology topology = woldMSpecPattern();
     accessControlManager.updatePlan(topology, plan);
     plan.run();
-
     List<Quota> quotas = new ArrayList<>();
     Quota quota = new Quota("user1", Optional.empty(), Optional.of(20.0));
     quotas.add(quota);
@@ -325,10 +275,8 @@ public class QuotasManagerIT {
     topologyAdminClient.assignQuotasPrincipal(quotas);
     // Verify Quotas
     assertTrue(verifyQuotasOnlyUser(quotas).stream().allMatch(f -> f.equals(true)));
-
     topologyAdminClient.removeQuotasPrincipal(List.of(new User("user2")));
     assertTrue(verifyQuotasOnlyUser(List.of(quota)).stream().allMatch(f -> f.equals(true)));
-
     assertTrue(verifyQuotasOnlyUser(List.of(quota2)).stream().allMatch(f -> f.equals(false)));
   }
 
@@ -354,13 +302,13 @@ public class QuotasManagerIT {
 
   private void verifyQuotaAssigment(Quota q, Map<String, Double> map) {
     if (q.getProducer_byte_rate().isPresent()) {
-      assertTrue(map.get("producer_byte_rate").equals(q.getProducer_byte_rate().get()));
+      assertEquals(map.get("producer_byte_rate"), q.getProducer_byte_rate().get());
     }
     if (q.getConsumer_byte_rate().isPresent()) {
-      assertTrue(map.get("consumer_byte_rate").equals(q.getConsumer_byte_rate().get()));
+      assertEquals(map.get("consumer_byte_rate"), q.getConsumer_byte_rate().get());
     }
     if (q.getRequest_percentage().isPresent()) {
-      assertTrue(map.get("request_percentage").equals(q.getRequest_percentage().get()));
+      assertEquals(map.get("request_percentage"), q.getRequest_percentage().get());
     }
   }
 }
